--- a/about_us.html
+++ b/about_us.html
@@ -1,10 +1,240 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Explanator - Szkolenia otwarte, szkolenia zamknięte i kursy on-line</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/dev.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/modernizr-custom.js"></script>
 </head>
+
 <body>
-	
+
+<header class="headersite">
+    <div class="headersite-top">
+        <div class="container">
+            <div class="row">
+                <ul class="nav-help">
+                    <li class="nav-help-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
+                    <li class="nav-help-item"><i class="icon icon--phone"></i>tel. (61) 85 50 112</li>
+                    <li class="nav-help-item"><i class="icon icon--help"></i><a href="#">Pomoc</a></li>
+                    <li class="nav-help-item"><i class="icon icon--cart"></i><a href="#">Koszyk (0)</a></li>
+                    <li class="nav-help-item"><i class="icon icon--search"></i><a href="#">Szukaj</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="headersite-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col logo">
+                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
+                </div>
+                <nav class="col-lg-auto navbar">
+                    <ul class="navbar-inner">
+                        <li class="navbar-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
+                        <li class="navbar-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
+                        <li class="navbar-item"><a href="publications.html">Publikacje</a></li>
+                        <li class="navbar-item"><a href="about_us.html">O nas</a></li>
+                        <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>
+
+<main class="contentbox contentbox--contact">
+    <div class="container">
+        <div class="header center">
+            <h3 class="header-title header-title--name"><span>O nas</span></h3>
+        </div>
+    </div>
+    <div class="container contentbox-main-hld">
+        <div class="row contentbox-main">
+            <div class="col contact-details">
+                <div class="header">
+                    <h4 class="header-title header-title--section"><span>Nasza misja</span></h4>
+                </div>
+                <div class="row">
+                    <div class="col data">
+                        <p>Koncentrujemy się na identyfikowaniu problemów praktyki zawodowej i biznesowej. Poszukujemy sprawdzonych rozwiązań, które oferujemy profesjonalistom. Rzetelna wiedza, atrakcyjna forma przekazu, narzędziowość proponowanych rozwiązań – to azymuty wyznaczające kierunki naszej aktywności. Nieustannie doskonalimy się, aby wspomagać rozwój naszych Klientów.</p>
+                    </div>
+                    <div class="col-md-auto image">
+                        <img src="http://via.placeholder.com/398x64/ddd/000000" alt="" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<section class="areasactivity">
+    <div class="container">
+        <div class="row is-odd">
+            <div class="col-lg-6 data">
+                <div class="header">
+                    <h4 class="header-title header-title--section"><span>Szkolenia otwarte</span></h4>
+                </div>
+                <p>Oferujemy dobrze zdefiniowane i zwarte formy szkoleniowe obejmujące swoją tematyką szeroko rozumiane <b>zagadnienia finansowe i podatkowe</b>, wspomagamy praktykę <b>zarządzania przedsiębiorstwem</b>, przedstawiamy rozwiązania problemów zawodowych, tłumaczymy <b>zawiłości prawa</b> z różnych obszarów. Szczególną wagę przywiązujemy do <b>kompetencji i praktycznych doświadczeń</b> współpracujących z nami trenerów i wykładowców.</p>
+                <a href="courses_open.html" class="btn btn-primary">Aktualne szkolenia otwarte</a>
+            </div>
+            <div class="col-lg-6 image">
+                <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+            </div>
+        </div>
+        <div class="row is-even">
+            <div class="col-lg-6 data">
+                <div class="header">
+                    <h4 class="header-title header-title--section"><span>Szkolenia zamknięte</span></h4>
+                </div>
+                <p>Nasz zespół proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> dedykowanych wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego kadr</b> zarządzających i pracowników.</p>
+                <a href="#" class="btn btn-primary">Pobierz katalog szkoleń zamkniętych</a>
+            </div>
+            <div class="col-lg-6 image">
+                <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+            </div>
+        </div>
+        <div class="row is-odd">
+            <div class="col-lg-6 data">
+                <div class="header">
+                    <h4 class="header-title header-title--section"><span>Wydawnictwo</span></h4>
+                </div>
+                <p>Rozwijamy program wydawniczy, który tak poprzez <b>media drukowane, jak i elektroniczne</b> ma wspierać i inspirować profesjonalistów. Obok znaczących pozycji z zakresu <b>literatury biznesowej</b> chcemy oferować także publikacje i <b>serwisy informacyjne</b> wspierające na co dzień ludzi podejmujących decyzje w przedsiębiorstwach i instytucjach publicznych.</p>
+                <a href="courses_open.html" class="btn btn-primary">Zobacz publikacje</a>
+            </div>
+            <div class="col-lg-6 image">
+                <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+            </div>
+        </div>
+    </div>
+
+
+    
+</section>
+
+<section class="insetbox">
+    <div class="container">
+        <div class="header">
+            <h3 class="header-title header-title--simple">Zapisz się do newslettera</h3>
+        </div>
+        <div class="row">
+            <div class="col-7">
+                <p>Niezawodna informacja na temat wydarzeń branżowych, nowych publikacji i aktualizacji serwisu</p>
+            </div>
+            <div class="col">
+                <form class="form-inline form-newsletter form-newsletter--main">
+                    <div class="form-group form-group-submit">
+                        <input type="email" class="form-control" placeholder="Twój adres e-mail">
+                        <button type="submit" class="btn btn-submit">Wyślij</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="theytrusted">
+    <div class="container">
+        <div class="header center">
+            <h3 class="header-title header-title--name"><span>Zaufali nam</span></h3>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <ul class="js-slick-items slick-slider theytrusted-inner">
+                    <li class="item"><img src="http://via.placeholder.com/250x65/ffcffc/000000?text=1" alt="" /></li>
+                    <li class="item"><img src="http://via.placeholder.com/250x65/ffcccc/000000?text=2" alt="" /></li>
+                    <li class="item"><img src="http://via.placeholder.com/250x65/cccffc/000000?text=3" alt="" /></li>
+                    <li class="item"><img src="http://via.placeholder.com/250x65/ffccfc/000000?text=4" alt="" /></li>
+                    <li class="item"><img src="http://via.placeholder.com/250x65/ffcccc/000000?text=5" alt="" /></li>
+                    <li class="item"><img src="http://via.placeholder.com/250x65/cffffc/000000?text=6" alt="" /></li>
+                </ul>
+            </div>
+            <script>
+                $(document).ready(function(){
+                    $('.js-slick-items.theytrusted-inner').slick({
+                        slide: 'li',
+                        arrows: false,
+                        dots: false,
+                        infinite: true,
+                        slidesToShow: 4,
+                        slidesToScroll: 1,
+                        autoplay: true,
+                    });
+                });
+            </script>
+        </div>
+    </div>
+</section>
+
+<footer class="footersite">
+    <div class="container">
+        <div class="footersite-data row">
+            <div class="col-sm-6 col-md-4">
+                <div class="logo">
+                    <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
+                </div>
+                <ul class="list list--icon list--white">
+                    <li class="list-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
+                    <li class="list-item"><i class="icon icon--phone"></i>tel. (61) 85 50 112</li>
+                    <li class="list-item"><i class="icon icon--location"></i>Kościelna 30 lok. 59</li>
+                </ul>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="header">
+                    <h3 class="header-title header-title--section  header-title--white"><span>Na skróty</span></h3>
+                </div>
+                <ul class="list-2-col">
+                    <li class="list-2-col-inner">
+                        <ul class="nav-bull">
+                            <li class="nav-bull-item"><a href="index.html">Strona główna</a></li>
+                            <li class="nav-bull-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
+                            <li class="nav-bull-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
+                            <li class="nav-bull-item"><a href="publications.html">Publikacje</a></li>
+                        </ul>
+                    </li>
+                    <li class="list-2-col-inner">
+                        <ul class="nav-bull">
+                            <li class="nav-bull-item"><a href="#">Regulamin</a></li>
+                            <li class="nav-bull-item"><a href="#">Polityka prywatności</a></li>
+                            <li class="nav-bull-item"><a href="about_us.html">O nas</a></li>
+                            <li class="nav-bull-item"><a href="contact.html">Kontakt</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <div class="header">
+                    <h3 class="header-title header-title--section header-title--white"><span>Newsletter</span></h3>
+                </div>
+                <p>Niezawodna informacja na temat wydarzeń branżowych, nowych publikacji i aktualizacji serwisu.</p>
+                <form class="form-inline form-newsletter form-newsletter--bottom">
+                    <div class="form-group form-group-submit">
+                        <input type="email" class="form-control" placeholder="Twój adres e-mail">
+                        <button type="submit" class="btn btn-submit">Wyślij</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="footersite-copyright row">
+            <div class="col">
+                <p>Copyright &copy; 2009-2019 All Rights Reserved. Wszystkie prawa zastrzeżone.</p>
+                <p>Explanator - szkolenia obejmujące zagadnienia prawne, finansowo-podatkowe i problemy zarządzania przedsiębiorstwami i instytucjami publicznymi.</p>
+                <p>Ta strona jest chroniona przez reCAPTCHA i obowiązują na niej <a href="#">polityka prywatności</a> oraz <a href="#">warunki korzystania</a> z usługi firmy Google.</p>
+            </div>
+        </div>
+    </div>
+</footer>
+<script src="js/site.js"></script>
+<script src="vendor/slick/slick.min.js"></script>
+
 </body>
 </html>
