--- a/courses_closed.html
+++ b/courses_closed.html
@@ -2,26 +2,26 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" name="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Explanator - Szkolenia otwarte, szkolenia zamknięte i kursy on-line</title>
-    <meta name="keywords" name="" />
-    <meta name="description" name="" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/dev.css" />
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/icheck/skins/square/red.css" />
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="vendor/popper/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/modernizr-custom.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="js/modernizr-custom.js"></script>
 </head>
 
 <body>
 
 <header class="headersite">
-    <section class="headersite-top">
+    <div class="headersite-top">
         <div class="container">
             <div class="row">
                 <ul class="nav-help">
@@ -33,14 +33,14 @@
                 </ul>
             </div>
         </div>
-    </section>
-    <section class="headersite-bottom">
+    </div>
+    <div class="headersite-bottom">
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt=""></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
                 </div>
-                <menu class="col-lg-auto navbar">
+                <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
                         <li class="navbar-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
                         <li class="navbar-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
@@ -48,10 +48,10 @@
                         <li class="navbar-item"><a href="about_us.html">O nas</a></li>
                         <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
                     </ul>
-                </menu>
+                </nav>
             </div>
         </div>
-    </section>
+    </div>
 </header>
 
 <main>
@@ -61,23 +61,23 @@
         </div>
     </div>
 
-	<section class="insetbox insetbox--admission">
-	    <div class="container">
-	        <div class="row">
-	            <div class="col">
-	                <p>Explanator proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> „in company” wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego</b> kadr zarządzających i pracowników.</p>
-	                <a href="contact.html" class="btn btn-primary btn-primary pull-right">Pobierz katalog</a>
-	            </div>
-	        </div>
-	    </div>
-	</section>
+    <div class="insetbox insetbox--admission">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p>Explanator proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> „in company” wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego</b> kadr zarządzających i pracowników.</p>
+                    <a href="contact.html" class="btn btn-primary btn-primary pull-right">Pobierz katalog</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row">
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -102,7 +102,7 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -127,7 +127,7 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -152,7 +152,7 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -177,7 +177,7 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -200,29 +200,29 @@
                 </div>
             </div>
             <div class="col-lg-12 listing-action">
-				<ul class="pagination">
-					<li class="prev"><a href="#"><i class="icon icon--arrow-left"></i> poprzednia strona</a></li>
-					<li class="active"><a href="#">1<span class="sr-only">(aktualna)</span></a></li>
-					<li><a href="#">2</a></li>
-					<li><a href="#">3</a></li>
-					<li><a href="#">4</a></li>
-					<li class="blank"><span>...</span></li>
-					<li class="next"><a href="#">następna strona <i class="icon icon--arrow-right"></i></a></li>
-				</ul>
-				<div class="btn-group">
-					<a class="btn btn-border dropdown-toggle" data-toggle="dropdown" href="#">pokaż 5 na stronie <i class="icon icon--arrow-down"></i></a>
-					<ul class="dropdown-menu">
-						<li class="dropdown-item"><a href="#">pokaż 5 na stronie</a></li>
-						<li class="dropdown-item"><a href="#">pokaż 10 na stronie</a></li>
-						<li class="dropdown-item"><a href="#">pokaż 25 na stronie</a></li>
-						<li class="dropdown-item"><a href="#">pokaż 50 na stronie</a></li>
-					</ul>
-					<a href="#" class="btn btn-border">pokaż wszystkie <i class="icon icon--arrow-right"></i></a>
-				</div>
+                <ul class="pagination">
+                    <li class="prev"><a href="#"><i class="icon icon--arrow-left"></i> poprzednia strona</a></li>
+                    <li class="active"><a href="#">1<span class="sr-only">(aktualna)</span></a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li class="blank"><span>...</span></li>
+                    <li class="next"><a href="#">następna strona <i class="icon icon--arrow-right"></i></a></li>
+                </ul>
+                <div class="btn-group">
+                    <a class="btn btn-border dropdown-toggle" data-toggle="dropdown" href="#">pokaż 5 na stronie <i class="icon icon--arrow-down"></i></a>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-item"><a href="#">pokaż 5 na stronie</a></li>
+                        <li class="dropdown-item"><a href="#">pokaż 10 na stronie</a></li>
+                        <li class="dropdown-item"><a href="#">pokaż 25 na stronie</a></li>
+                        <li class="dropdown-item"><a href="#">pokaż 50 na stronie</a></li>
+                    </ul>
+                    <a href="#" class="btn btn-border">pokaż wszystkie <i class="icon icon--arrow-right"></i></a>
+                </div>
             </div>
         </div>
     </div>
-</section>
+</main>
 
 <section class="insetbox">
     <div class="container">
@@ -238,13 +238,12 @@
     </div>
 </section>
 
-
 <footer class="footersite">
         <div class="container">
             <div class="footersite-data row">
                 <div class="col-sm-6 col-md-4">
                     <div class="logo">
-                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt=""></a>
+                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                     </div>
                     <ul class="list list--icon list--white">
                         <li class="list-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
@@ -297,9 +296,8 @@
             </div>
         </div>
 </footer>
-<script type="text/javascript" src="js/site.js"></script>
-<script type="text/javascript" src="vendor/slick/slick.min.js"></script>
-<script type="text/javascript" src="vendor/icheck/icheck.min.js"></script>
+<script src="js/site.js"></script>
+<script src="vendor/slick/slick.min.js"></script>
 
 </body>
 </html>
