--- a/courses_closed_details.html
+++ b/courses_closed_details.html
@@ -2,25 +2,24 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" name="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Explanator - Szkolenia otwarte, szkolenia zamknięte i kursy on-line</title>
-    <meta name="keywords" name="" />
-    <meta name="description" name="" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/dev.css" />
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/icheck/skins/square/red.css" />
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="js/modernizr-custom.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/modernizr-custom.js"></script>
 </head>
 
 <body>
 
 <header class="headersite">
-    <section class="headersite-top">
+    <div class="headersite-top">
         <div class="container">
             <div class="row">
                 <ul class="nav-help">
@@ -32,14 +31,14 @@
                 </ul>
             </div>
         </div>
-    </section>
-    <section class="headersite-bottom">
+    </div>
+    <div class="headersite-bottom">
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt=""></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
                 </div>
-                <menu class="col-lg-auto navbar">
+                <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
                         <li class="navbar-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
                         <li class="navbar-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
@@ -47,114 +46,112 @@
                         <li class="navbar-item"><a href="about_us.html">O nas</a></li>
                         <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
                     </ul>
-                </menu>
+                </nav>
             </div>
         </div>
-    </section>
+    </div>
 </header>
 
-<main role="main" class="contentbox contentbox--details">
-	<header class="contentbox-header-hld">
-		<div class="container">
-			<div class="row">
-	            <div class="col-sm-4 col-lg-4 contentbox-image-hld">
-	                <span class="label label-itembox">szkolenie zamknięte</span>
-	                <img src="https://via.placeholder.com/380x285/ddd/000.png" />
-	            </div>
-				<div class="col-sm-8 col-lg-8 contentbox-header">
-					<div class="contentbox-title-hld">
-						<h1 class="title">Ocena okresowa pracowników</h1>
-						<h2 class="subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h2>
-					</div>
-					<div class="event-details">
-						<p class="location"><i class="icon icon--location"></i>Szkolenie dostępne w formule zamkniętej w siedzibie zleceniodawcy</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<div class="container contentbox-main-hld">
-		<div class="row">
-			<div class="col-lg-9 contentbox-action contentbox-action--top">
-				<a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
-				<ul class="list list--social">
-					<li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-					<li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-					<li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-					<li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-					<li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="row contentbox-main">
-			<div class="col-lg-8">
-				<h3 class="header-title header-title--content"><span>Opis</span></h3>
-				<p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkan temacie zwiększania skuteczności służb controllingowych i ich wpływu na rentowność przedsiębiorstw.</p>
-				<p><b>Podczas dwóch dni konferencyjnych, dkryją i poznają odpowiedzi na pytania:</b></p>
-				<ul>
-					<li>Kiedy strategia optymalizacji kosztów staje się barierą wzrostu?</li>
-					<li>Jak identyfikować procesy bieżące do natychmiastowej optymalizacji?</li>
-					<li>Jak optymalizować organizację czasu pracy i ograniczyć nadgodziny?</li>
-					<li>Jak innym udało się utrzymać płynność i nie pogorszyć rentowności?</li>
-					<li>Jak optymalizować podatki już na etapie projektowania procesów w firmach?</li>
-					<li>Czy automatyzacja i robotyzacja to strategia dla każdego przedsiębiorstwa?</li>
-				</ul>
-				<h3 class="header-title header-title--content"><span>Zawartość</span></h3>
-				<p><b>Dzień 1: Rentowność w ryzach,, czyli nawiguj w najlepszym kierunku</b></p>
-				<ol>
-					<li>Jak realizować projekty optymalizacji kosztowej, aby nabrać wiatru w żagle?
-						<ul>
-							<li>Kiedy warto, a kiedy nie powinno się myśleć o projektach redukcji kosztów</li>
-							<li>Gdzie szukać oszczędności - jak badać firmę</li>
-							<li>Skąd czerpać informacje o potencjalnej skali redukcji</li>
-							<li>Kiedy wdrożona strategia optymalizacji kosztów staje się barierą wzrostu</li>
-						</ul>
-					</li>
-					<li>Bądź gotowy na zwrot na wiatr: jak narzędzia analityczne wspierają szybkie zmiany organizacyjne, optymalizacje i oszczędności
-						<ul>
-							<li>Miary efektywności procesów wewnętrznych - co i jak mierzyć</li>
-							<li>Dlaczego warto budować dynamiczną zdolność analityczną</li>
-							<li>O zastosowaniu i dostępności modeli predykcyjnych, narzędzi BI i innych w działaniach optymalizacyjnych - case study przedsiębiorstwa z branży finansowej oraz CUW</li>
-						</ul>
-					</li>
-					<li>Cyfrowa zmiana reguł gry, czyli optymalizacje biznesowe po nowemu
-						<ul>
-							<li>Cyfrowe państwo, cyfrowe podatki. Czy to już koniec "klasycznej" optymalizacji podatkowej?</li>
-							<li>Jakość i spójność danych, projektowanie procesów oraz rozproszona odpowiedzialność. Jak procesy biznesowe wpływają na zawartość Jednolitego Pliku Kontrolnego, poprzez który KAS przygląda się firmie?</li>
-							<li>Nowa rola i nowy model współpracy z doradcą biznesowym. Co jest lepsze dla firmy korzystającej z doradców</li>
-						</ul>
-					</li>
-				</ol>
-			</div>
-			<div class="col-lg-4">
-				<h3 class="header-title header-title--content"><span>Osoby docelowe</span></h3>
-				<ul>
-					<li>controllerzy</li>
-					<li>dyrektorzy finansowi</li>
-					<li>księgowi</li>
-					<li>właściciele firm</li>
-				</ul>
-				<h3 class="header-title header-title--content"><span>Materiały do pobrania</span></h3>
-				<ul class="list list--file">
-					<li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo_FNC_Warszawa.pdf</a></li>
-					<li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo_CENY_POZ.pdf</a></li>
-				</ul>
-				<h3 class="header-title header-title--content"><span>Wykładowca / Trener</span></h3>
-				<p>Tomasz Targosz</p>
-				<p>Od 12 lat sprzedaje i szkoli handlowców. Uczył się technik sprzedaży od najlepszych, a dziś przekłada wiedzę na praktyczne warsztaty. Obala stare modele obsługi klientów i propaguje nowoczesny nurt sprzedażowy, oparty na poznaniu drugiej osoby poprzez obserwację, słuchanie i szczere zrozumienie. Współpracował m.in. z Ibis Hotel, Nordea Bank, Impel. Autor książek „Sprzedaż jest sexi” oraz „Martwa Sprzedaż”, cyklicznie pisuje do czasopism branżowych takich jak „Szef Sprzedaży”, „As Sprzedaży” i „Nowa Sprzedaż”.</p>
-			</div>
-			<div class="col-lg-12 contentbox-action contentbox-action--bottom">
-				<a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
-				<ul class="list list--social">
-					<li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-					<li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-					<li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-					<li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-					<li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
+<main class="contentbox contentbox--details">
+    <header class="contentbox-header-hld">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-lg-4 contentbox-image-hld">
+                    <span class="label label-itembox">szkolenie zamknięte</span>
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                </div>
+                <div class="col-sm-8 col-lg-8 contentbox-header">
+                    <div class="contentbox-title-hld">
+                        <h1 class="title">Ocena okresowa pracowników</h1>
+                        <h2 class="subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h2>
+                    </div>
+                    <div class="event-details">
+                        <p class="location"><i class="icon icon--location"></i>Szkolenie dostępne w formule zamkniętej w siedzibie zleceniodawcy</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="container contentbox-main-hld">
+        <div class="row contentbox-main">
+            <div class="col-lg-9 contentbox-action contentbox-action--top">
+                <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
+                <ul class="list list--social">
+                    <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                    <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                    <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                    <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                    <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                </ul>
+            </div>
+            <div class="col-lg-8">
+                <h3 class="header-title header-title--content"><span>Opis</span></h3>
+                <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkan temacie zwiększania skuteczności służb controllingowych i ich wpływu na rentowność przedsiębiorstw.</p>
+                <p><b>Podczas dwóch dni konferencyjnych, dkryją i poznają odpowiedzi na pytania:</b></p>
+                <ul>
+                    <li>Kiedy strategia optymalizacji kosztów staje się barierą wzrostu?</li>
+                    <li>Jak identyfikować procesy bieżące do natychmiastowej optymalizacji?</li>
+                    <li>Jak optymalizować organizację czasu pracy i ograniczyć nadgodziny?</li>
+                    <li>Jak innym udało się utrzymać płynność i nie pogorszyć rentowności?</li>
+                    <li>Jak optymalizować podatki już na etapie projektowania procesów w firmach?</li>
+                    <li>Czy automatyzacja i robotyzacja to strategia dla każdego przedsiębiorstwa?</li>
+                </ul>
+                <h3 class="header-title header-title--content"><span>Zawartość</span></h3>
+                <p><b>Dzień 1: Rentowność w ryzach,, czyli nawiguj w najlepszym kierunku</b></p>
+                <ol>
+                    <li>Jak realizować projekty optymalizacji kosztowej, aby nabrać wiatru w żagle?
+                        <ul>
+                            <li>Kiedy warto, a kiedy nie powinno się myśleć o projektach redukcji kosztów</li>
+                            <li>Gdzie szukać oszczędności - jak badać firmę</li>
+                            <li>Skąd czerpać informacje o potencjalnej skali redukcji</li>
+                            <li>Kiedy wdrożona strategia optymalizacji kosztów staje się barierą wzrostu</li>
+                        </ul>
+                    </li>
+                    <li>Bądź gotowy na zwrot na wiatr: jak narzędzia analityczne wspierają szybkie zmiany organizacyjne, optymalizacje i oszczędności
+                        <ul>
+                            <li>Miary efektywności procesów wewnętrznych - co i jak mierzyć</li>
+                            <li>Dlaczego warto budować dynamiczną zdolność analityczną</li>
+                            <li>O zastosowaniu i dostępności modeli predykcyjnych, narzędzi BI i innych w działaniach optymalizacyjnych - case study przedsiębiorstwa z branży finansowej oraz CUW</li>
+                        </ul>
+                    </li>
+                    <li>Cyfrowa zmiana reguł gry, czyli optymalizacje biznesowe po nowemu
+                        <ul>
+                            <li>Cyfrowe państwo, cyfrowe podatki. Czy to już koniec "klasycznej" optymalizacji podatkowej?</li>
+                            <li>Jakość i spójność danych, projektowanie procesów oraz rozproszona odpowiedzialność. Jak procesy biznesowe wpływają na zawartość Jednolitego Pliku Kontrolnego, poprzez który KAS przygląda się firmie?</li>
+                            <li>Nowa rola i nowy model współpracy z doradcą biznesowym. Co jest lepsze dla firmy korzystającej z doradców</li>
+                        </ul>
+                    </li>
+                </ol>
+            </div>
+            <div class="col-lg-4">
+                <h3 class="header-title header-title--content"><span>Osoby docelowe</span></h3>
+                <ul>
+                    <li>controllerzy</li>
+                    <li>dyrektorzy finansowi</li>
+                    <li>księgowi</li>
+                    <li>właściciele firm</li>
+                </ul>
+                <h3 class="header-title header-title--content"><span>Materiały do pobrania</span></h3>
+                <ul class="list list--file">
+                    <li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo FNC Warszawa.pdf</a></li>
+                    <li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo CENY POZ.pdf</a></li>
+                </ul>
+                <h3 class="header-title header-title--content"><span>Wykładowca / Trener</span></h3>
+                <p>Tomasz Targosz</p>
+                <p>Od 12 lat sprzedaje i szkoli handlowców. Uczył się technik sprzedaży od najlepszych, a dziś przekłada wiedzę na praktyczne warsztaty. Obala stare modele obsługi klientów i propaguje nowoczesny nurt sprzedażowy, oparty na poznaniu drugiej osoby poprzez obserwację, słuchanie i szczere zrozumienie. Współpracował m.in. z Ibis Hotel, Nordea Bank, Impel. Autor książek „Sprzedaż jest sexi” oraz „Martwa Sprzedaż”, cyklicznie pisuje do czasopism branżowych takich jak „Szef Sprzedaży”, „As Sprzedaży” i „Nowa Sprzedaż”.</p>
+            </div>
+            <div class="col-lg-12 contentbox-action contentbox-action--bottom">
+                <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
+                <ul class="list list--social">
+                    <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                    <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                    <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                    <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                    <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </main>
 
 
@@ -163,7 +160,7 @@
             <div class="footersite-data row">
                 <div class="col-sm-6 col-md-4">
                     <div class="logo">
-                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt=""></a>
+                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                     </div>
                     <ul class="list list--icon list--white">
                         <li class="list-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
@@ -216,10 +213,8 @@
             </div>
         </div>
 </footer>
-
-<script type="text/javascript" src="js/site.js"></script>
-<script type="text/javascript" src="vendor/slick/slick.min.js"></script>
-<script type="text/javascript" src="vendor/icheck/icheck.min.js"></script>
+<script src="js/site.js"></script>
+<script src="vendor/slick/slick.min.js"></script>
 
 </body>
 </html>
