--- a/courses_open.html
+++ b/courses_open.html
@@ -2,26 +2,26 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" name="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Explanator - Szkolenia otwarte, szkolenia zamknięte i kursy on-line</title>
-    <meta name="keywords" name="" />
-    <meta name="description" name="" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/dev.css" />
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/icheck/skins/square/red.css" />
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="vendor/popper/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/modernizr-custom.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="js/modernizr-custom.js"></script>
 </head>
 
 <body>
 
 <header class="headersite">
-    <section class="headersite-top">
+    <div class="headersite-top">
         <div class="container">
             <div class="row">
                 <ul class="nav-help">
@@ -33,14 +33,14 @@
                 </ul>
             </div>
         </div>
-    </section>
-    <section class="headersite-bottom">
+    </div>
+    <div class="headersite-bottom">
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt=""></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
                 </div>
-                <menu class="col-lg-auto navbar">
+                <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
                         <li class="navbar-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
                         <li class="navbar-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
@@ -48,10 +48,10 @@
                         <li class="navbar-item"><a href="about_us.html">O nas</a></li>
                         <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
                     </ul>
-                </menu>
+                </nav>
             </div>
         </div>
-    </section>
+    </div>
 </header>
 
 <main>
@@ -66,7 +66,76 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                    <a href="courses_open_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
+                </div>
+                <div class="col-lg-8 itembox-data">
+                    <div class="itembox-header">
+                        <h3 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h3>
+                        <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+                    </div>
+                    <div class="itembox-body">
+                        <div class="col-lg-7 itembox-content">
+                            <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
+                        </div>
+                        <div class="col-lg-5 itembox-action itembox-action--line">
+                            <p><b>Miejsce i termin:</b>
+                                <i class="icon icon--calendar"></i>
+                                <a href="courses_open_details.html" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
+                            </p>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 itembox">
+                <div class="col-lg-4 itembox-image-hld">
+                    <span class="label label-itembox">e-kurs mailowy</span>
+                    <a href="courses_open_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
+                </div>
+                <div class="col-lg-8 itembox-data">
+                    <div class="itembox-header">
+                        <h3 class="itembox-header-title"><a href="#">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h3>
+                        <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
+                    </div>
+                    <div class="itembox-body">
+                        <div class="col-lg-7 itembox-content">
+                            <p>Zinteresowanie pracodawców umowami cywilno-prawnymi nie słabnie. Jednakże z każdą formą elastycznego zatrudnienia związane są liczne ryzyka. Możliwości popełnienia błędu skutkującego znaczącymi konsekwencjami prawnymi i finansowymi jest wyjątkowo duże. Dodatkowo pojawia się liczne orzecznictwo, które ma konkretny wpływ na praktykę zatrudniania pracowników.</p>
+                        </div>
+                        <div class="col-lg-5 itembox-action itembox-action--line">
+                            <p><b>Miejsce i termin:</b>
+                                <i class="icon icon--calendar"></i>
+                                <a href="#" class="itembox-action-item">Poznań, 22.08.2019</a>
+                                <a href="#" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
+                                <a href="#" class="itembox-action-item">Gdańsk, 4.09.2019</a>
+                            </p>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
+                        </div>
+                        <div class="popup-inline" style="margin: 0; position: absolute; top: 0; left: 0;right: 0; bottom: 0; border: none;">
+                            <div class="close-hld js-popup-close">
+                                <i class="icon icon--close"></i>
+                            </div>
+                            <div class="header center">
+                                <h4 class="header-title header-title--section"><span>Termin szkolenia</span></h4>
+                            </div>
+                            <p>Proszę wybrać edycję szkolenia:</p>
+                            <a href="courses_open_details.html" class="btn btn-primary">Poznań, 22.08.2019</a>
+                            <a href="courses_open_details.html" class="btn btn-primary">Warszawa, 22-29.08.2019</a>
+                            <a href="courses_open_details.html" class="btn btn-primary">Gdańsk, 4.09.2019</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 itembox">
+                <div class="col-lg-4 itembox-image-hld">
+                    <span class="label label-itembox">forum</span>
+                    <a href="courses_open_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -91,7 +160,9 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">e-kurs mailowy</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                    <a href="courses_open_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -118,59 +189,9 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
-                </div>
-                <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
-                        <h3 class="itembox-header-title">5. Forum Nowoczesnego Controllingu</h3>
-                        <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
-                    </div>
-                    <div class="itembox-body">
-                        <div class="col-lg-7 itembox-content">
-                            <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
-                        </div>
-                        <div class="col-lg-5 itembox-action itembox-action--line">
-                            <p><b>Miejsce i termin:</b>
-                                <i class="icon icon--calendar"></i>
-                                <a href="#" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
-                            </p>
-                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
-                    <span class="label label-itembox">e-kurs mailowy</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
-                </div>
-                <div class="col-lg-8 itembox-data">
-                    <div class="itembox-header">
-                        <h3 class="itembox-header-title">Umowa zlecenia - przegląd ryzyk formalno-prawnych</h3>
-                        <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
-                    </div>
-                    <div class="itembox-body">
-                        <div class="col-lg-7 itembox-content">
-                            <p>Zinteresowanie pracodawców umowami cywilno-prawnymi nie słabnie. Jednakże z każdą formą elastycznego zatrudnienia związane są liczne ryzyka. Możliwości popełnienia błędu skutkującego znaczącymi konsekwencjami prawnymi i finansowymi jest wyjątkowo duże. Dodatkowo pojawia się liczne orzecznictwo, które ma konkretny wpływ na praktykę zatrudniania pracowników.</p>
-                        </div>
-                        <div class="col-lg-5 itembox-action itembox-action--line">
-                            <p><b>Miejsce i termin:</b>
-                                <i class="icon icon--calendar"></i>
-                                <a href="#" class="itembox-action-item">Poznań, 22.08.2019</a>
-                                <a href="#" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
-                                <a href="#" class="itembox-action-item">Gdańsk, 4.09.2019</a>
-                            </p>
-                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-12 itembox">
-                <div class="col-lg-4 itembox-image-hld">
-                    <span class="label label-itembox">forum</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                    <a href="courses_open_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -193,36 +214,36 @@
                 </div>
             </div>
             <div class="col-lg-12 listing-action">
-				<ul class="pagination">
-					<li class="prev"><a href="#"><i class="icon icon--arrow-left"></i> poprzednia strona</a></li>
-					<li class="active"><a href="#">1<span class="sr-only">(aktualna)</span></a></li>
-					<li><a href="#">2</a></li>
-					<li><a href="#">3</a></li>
-					<li><a href="#">4</a></li>
-					<li class="blank"><span>...</span></li>
-					<li class="next"><a href="#">następna strona <i class="icon icon--arrow-right"></i></a></li>
-				</ul>
-				<div class="btn-group">
-					<a class="btn btn-border dropdown-toggle" data-toggle="dropdown" href="#">pokaż 5 na stronie <i class="icon icon--arrow-down"></i></a>
-					<ul class="dropdown-menu">
-						<li class="dropdown-item"><a href="#">pokaż 5 na stronie</a></li>
-						<li class="dropdown-item"><a href="#">pokaż 10 na stronie</a></li>
-						<li class="dropdown-item"><a href="#">pokaż 25 na stronie</a></li>
-						<li class="dropdown-item"><a href="#">pokaż 50 na stronie</a></li>
-					</ul>
-					<a href="#" class="btn btn-border">pokaż wszystkie <i class="icon icon--arrow-right"></i></a>
-				</div>
+                <ul class="pagination">
+                    <li class="prev"><a href="#"><i class="icon icon--arrow-left"></i> poprzednia strona</a></li>
+                    <li class="active"><a href="#">1<span class="sr-only">(aktualna)</span></a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li class="blank"><span>...</span></li>
+                    <li class="next"><a href="#">następna strona <i class="icon icon--arrow-right"></i></a></li>
+                </ul>
+                <div class="btn-group">
+                    <a class="btn btn-border dropdown-toggle" data-toggle="dropdown" href="#">pokaż 5 na stronie <i class="icon icon--arrow-down"></i></a>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-item"><a href="#">pokaż 5 na stronie</a></li>
+                        <li class="dropdown-item"><a href="#">pokaż 10 na stronie</a></li>
+                        <li class="dropdown-item"><a href="#">pokaż 25 na stronie</a></li>
+                        <li class="dropdown-item"><a href="#">pokaż 50 na stronie</a></li>
+                    </ul>
+                    <a href="#" class="btn btn-border">pokaż wszystkie <i class="icon icon--arrow-right"></i></a>
+                </div>
             </div>
         </div>
     </div>
-</section>
+</main>
 
 <footer class="footersite">
         <div class="container">
             <div class="footersite-data row">
                 <div class="col-sm-6 col-md-4">
                     <div class="logo">
-                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt=""></a>
+                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                     </div>
                     <ul class="list list--icon list--white">
                         <li class="list-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
@@ -275,9 +296,8 @@
             </div>
         </div>
 </footer>
-<script type="text/javascript" src="js/site.js"></script>
-<script type="text/javascript" src="vendor/slick/slick.min.js"></script>
-<script type="text/javascript" src="vendor/icheck/icheck.min.js"></script>
+<script src="js/site.js"></script>
+<script src="vendor/slick/slick.min.js"></script>
 
 </body>
 </html>
