--- a/publications_details.html
+++ b/publications_details.html
@@ -2,25 +2,24 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" name="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Explanator - Szkolenia otwarte, szkolenia zamknięte i kursy on-line</title>
-    <meta name="keywords" name="" />
-    <meta name="description" name="" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/dev.css" />
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/icheck/skins/square/red.css" />
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="js/modernizr-custom.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/modernizr-custom.js"></script>
 </head>
 
 <body>
 
 <header class="headersite">
-    <section class="headersite-top">
+    <div class="headersite-top">
         <div class="container">
             <div class="row">
                 <ul class="nav-help">
@@ -32,14 +31,14 @@
                 </ul>
             </div>
         </div>
-    </section>
-    <section class="headersite-bottom">
+    </div>
+    <div class="headersite-bottom">
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt=""></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
                 </div>
-                <menu class="col-lg-auto navbar">
+                <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
                         <li class="navbar-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
                         <li class="navbar-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
@@ -47,47 +46,58 @@
                         <li class="navbar-item"><a href="about_us.html">O nas</a></li>
                         <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
                     </ul>
-                </menu>
+                </nav>
             </div>
         </div>
-    </section>
+    </div>
 </header>
 
-<main role="main" class="contentbox contentbox--details">
-	<header class="contentbox-header-hld">
-		<div class="container">
-			<div class="row">
-	            <div class="col-sm-4 col-lg-4 contentbox-image-hld">
-	                <span class="label label-itembox">aktualizowany poradnik wymiennokartkowy</span>
-	                <img src="https://via.placeholder.com/380x285/ddd/000.png" />
-	            </div>
-				<div class="col-sm-8 col-lg-8 contentbox-header">
-					<div class="contentbox-title-hld">
-						<h1 class="title">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</h1>
-						<h2 class="subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h2>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<div class="container contentbox-main-hld">
-		<div class="row">
-			<div class="col-lg-9 contentbox-action contentbox-action--top">
-				<p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
-                <p>(+ koszty wysyłki 25,20 zł brutto, wysyłka kurierem)</p>
-				<a href="courses_register.html" class="btn btn-primary">Zamów</a>
-				<ul class="list list--social">
-					<li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-					<li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-					<li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-					<li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-					<li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="row contentbox-main">
-			<div class="col-lg-8">
-				<h3 class="header-title header-title--content"><span>Opis</span></h3>
+<main class="contentbox contentbox--details">
+    <header class="contentbox-header-hld">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-lg-4 contentbox-image-hld">
+                    <span class="label label-itembox">aktualizowany poradnik wymiennokartkowy</span>
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                </div>
+                <div class="col-sm-8 col-lg-8 contentbox-header">
+                    <div class="contentbox-title-hld">
+                        <h1 class="title">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</h1>
+                        <h2 class="subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="container contentbox-main-hld">
+        <div class="row contentbox-main">
+            <div class="col-lg-9 contentbox-action contentbox-action--top">
+                <div class="popup-inline js-popup-hide">
+                    <div class="close-hld js-popup-close">
+                        <i class="icon icon--close"></i>
+                    </div>
+                    <div class="header center">
+                        <h4 class="header-title header-title--section"><span>Formularz zamówienia</span></h4>
+                    </div>
+                    <p>Proszę, określić sposób zamówienia:</p>
+                    <a href="#" class="btn btn-primary">Formularz przesłany FAXem</a>
+                    <a href="courses_register.html" class="btn btn-primary">Formularz wypełniany on-line</a>
+                </div>
+                <div class="col-lg-5 price-hld">
+                    <p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
+                    <p>(+ koszty wysyłki 25,20 zł brutto, wysyłka kurierem)</p>
+                </div>
+                <span class="btn btn-primary js-popup-show">Zamów</span>
+                <ul class="list list--social">
+                    <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                    <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                    <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                    <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                    <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                </ul>
+            </div>
+            <div class="col-lg-8">
+                <h3 class="header-title header-title--content"><span>Opis</span></h3>
                 <p>Ta unikalna, zwarta publikacja stanowi kompendium wiedzy, którą każdy menadżer powinien posiadać w zasięgu ręki. Klarowny podział publikacji pozwala na przyjazną nawigację po zagadnieniach związanych z regulacjami Kodeksu spółek handlowych. Dodatkowo, w uporządkowany sposób przedstawiane są kluczowe aspekty odpowiedzialności prawnej kadry zarządzającej.</p>
                 <p>Pierwsza część poradnika zawiera kwintesencję wiedzy na temat:</p>
                 <ul>
@@ -121,43 +131,57 @@
                     <li>zaznaczać dowolną ilość fragmentów (zakładki) i opatrywać je własnymi komentarzami</li>
                     <li>drukować strony lub dokumenty</li>
                 </ul>
-				<h3 class="header-title header-title--content"><span>Partnerzy</span></h3>
+                <h3 class="header-title header-title--content"><span>Partnerzy</span></h3>
                 <ul class="list list--partners">
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/ffcffc/000000?text=1" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x25/ffcccc/000000?text=2" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/cccffc/000000?text=3" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/ffccfc/000000?text=4" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x55/ffcccc/000000?text=5" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/cffffc/000000?text=6" /></li>
+                    <li class="list-item"><img src="http://via.placeholder.com/250x65/ffcffc/000000?text=1" alt="" /></li>
+                    <li class="list-item"><img src="http://via.placeholder.com/250x25/ffcccc/000000?text=2" alt="" /></li>
+                    <li class="list-item"><img src="http://via.placeholder.com/250x65/cccffc/000000?text=3" alt="" /></li>
+                    <li class="list-item"><img src="http://via.placeholder.com/250x65/ffccfc/000000?text=4" alt="" /></li>
+                    <li class="list-item"><img src="http://via.placeholder.com/250x55/ffcccc/000000?text=5" alt="" /></li>
+                    <li class="list-item"><img src="http://via.placeholder.com/250x65/cffffc/000000?text=6" alt="" /></li>
                 </ul>
-			</div>
-			<div class="col-lg-4">
-				<h3 class="header-title header-title--content"><span>Informacje techniczne</span></h3>
+            </div>
+            <div class="col-lg-4">
+                <h3 class="header-title header-title--content"><span>Informacje techniczne</span></h3>
                 <p>ISBN: 978-83-931703-6-4</p>
                 <p>Format: A5, segregator</p>
                 <p>Objętość: około 1300 stron</p>
                 <h3 class="header-title header-title--content"><span>Materiały do pobrania</span></h3>
-				<ul class="list list--file">
-					<li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH_i_odpowiedzialność_prawna_info_z_kuponem.pdf</a></li>
-					<li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH_i_odpowiedzialność_prawna_SPIS_TREŚCI.pdf</a></li>
-				</ul>
-				<h3 class="header-title header-title--content"><span>Autor</span></h3>
-				<p>Zespół autorów</p>
-				<p>Z poradnikiem współpracują liczni praktycy życia gospodarczego, specjaliści w swoich dziedzinach, prawnicy doskonale osadzeni w realiach gospodarczych.</p>
-			</div>
-			<div class="col-lg-12 contentbox-action contentbox-action--bottom">
-				<p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
-				<a href="courses_register.html" class="btn btn-primary">Zamów</a>
-				<ul class="list list--social">
-					<li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-					<li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-					<li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-					<li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-					<li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
+                <ul class="list list--file">
+                    <li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH i odpowiedzialność prawna info z kuponem.pdf</a></li>
+                    <li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH i odpowiedzialność prawna SPIS TREŚCI.pdf</a></li>
+                </ul>
+                <h3 class="header-title header-title--content"><span>Autor</span></h3>
+                <p>Zespół autorów</p>
+                <p>Z poradnikiem współpracują liczni praktycy życia gospodarczego, specjaliści w swoich dziedzinach, prawnicy doskonale osadzeni w realiach gospodarczych.</p>
+            </div>
+            <div class="col-lg-12 contentbox-action contentbox-action--bottom">
+                <div class="popup-inline js-popup-hide">
+                    <div class="close-hld js-popup-close">
+                        <i class="icon icon--close"></i>
+                    </div>
+                    <div class="header center">
+                        <h4 class="header-title header-title--section"><span>Formularz zamówienia</span></h4>
+                    </div>
+                    <p>Proszę, określić sposób zamówienia:</p>
+                    <a href="#" class="btn btn-primary">Formularz przesłany FAXem</a>
+                    <a href="courses_register.html" class="btn btn-primary">Formularz wypełniany on-line</a>
+                </div>
+                <div class="col-lg-5 price-hld">
+                    <p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
+                    <p>(+ koszty wysyłki 25,20 zł brutto, wysyłka kurierem)</p>
+                </div>
+                <span class="btn btn-primary js-popup-show">Zamów</span>
+                <ul class="list list--social">
+                    <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                    <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                    <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                    <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                    <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </main>
 
 
@@ -166,7 +190,7 @@
             <div class="footersite-data row">
                 <div class="col-sm-6 col-md-4">
                     <div class="logo">
-                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt=""></a>
+                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                     </div>
                     <ul class="list list--icon list--white">
                         <li class="list-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
@@ -219,10 +243,8 @@
             </div>
         </div>
 </footer>
-
-<script type="text/javascript" src="js/site.js"></script>
-<script type="text/javascript" src="vendor/slick/slick.min.js"></script>
-<script type="text/javascript" src="vendor/icheck/icheck.min.js"></script>
+<script src="js/site.js"></script>
+<script src="vendor/slick/slick.min.js"></script>
 
 </body>
 </html>
